--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="../static/dashboard.css">
 </head>
+
 <body>
     <div class="dashboard">
         <div class="sidebar">
@@ -16,41 +18,45 @@
             <div class="menu-item">Equipos</div>
             <div class="menu-item">Configuración</div>
         </div>
-        
+
         <div class="main-content">
             <div class="header">
                 <input type="text" class="search" placeholder="Buscar tareas...">
                 <button class="add-task">+ Nueva Tarea</button>
             </div>
-            
+
             <div class="task-grid">
                 <div class="task-column">
                     <div class="column-header">Por Hacer</div>
                     <div class="task-card">
                         <div class="task-title">Diseñar nueva interfaz</div>
+                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo ex excepturi, ullam</div>
                         <div class="task-date">Vence: 15 Enero</div>
                         <span class="task-priority high">Alta</span>
                     </div>
                     <div class="task-card">
                         <div class="task-title">Actualizar documentación</div>
+                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo ex excepturi, ullam</div>
                         <div class="task-date">Vence: 20 Enero</div>
                         <span class="task-priority low">Baja</span>
                     </div>
                 </div>
-                
+
                 <div class="task-column">
                     <div class="column-header">En Progreso</div>
                     <div class="task-card">
                         <div class="task-title">Desarrollo backend</div>
+                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo ex excepturi, ullam</div>
                         <div class="task-date">Vence: 18 Enero</div>
                         <span class="task-priority medium">Media</span>
                     </div>
                 </div>
-                
+
                 <div class="task-column">
                     <div class="column-header">Completado</div>
                     <div class="task-card">
                         <div class="task-title">Reunión de equipo</div>
+                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo ex excepturi, ullam</div>
                         <div class="task-date">Completado: 5 Enero</div>
                         <span class="task-priority low">Baja</span>
                     </div>
@@ -59,4 +65,5 @@
         </div>
     </div>
 </body>
+
 </html>
