--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="../static/dashboard.css">
+    <link rel="stylesheet" href="../static/css/dashboard.css">
 </head>
 
 <body>
