--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -111,6 +111,8 @@ body {
     border-left: 4px solid #3498db;
 }
 
+/* create-task */
+
 .task-title {
     font-weight: bold;
     margin-bottom: 5px;
@@ -148,4 +150,90 @@ body {
 .low {
     background: #00b894;
     color: white;
+}
+
+.div-create-task {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+    visibility: hidden;
+}
+
+.create-task {
+    background-color: #f8f9fa;
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    padding: 20px;
+    gap: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Efecto flotante */
+}
+
+.task-header h2 {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0;
+    text-align: center;
+    color: #333;
+}
+
+.task-body {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.txt-task {
+    height: 35px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    font-size: 14px;
+    padding: 5px 10px;
+    color: #333;
+    background-color: #fff;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif;
+}
+
+.txt-task:focus {
+    border-color: #007bff;
+    outline: none;
+    box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
+}
+
+textarea.task-description {
+    resize: none; 
+    height: 80px;
+}
+
+select.task-priority {
+    cursor: pointer;
+}
+
+.task-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.save-task {
+    background-color: #007bff;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.save-task:hover {
+    background-color: #0056b3;
 }
