Implementación de funcionalidades para la gestión de tareas
- Frontend:
  - Se creó el método `LoadTasks`, que envía una petición HTTP GET para obtener el JSON con las tareas asociadas al usuario.
  - Se implementó el método `cleanTasks`, encargado de limpiar dinámicamente los elementos no deseados en el DOM.

- Backend:
  - Se creó el endpoint `/getTasks`, que retorna un JSON con todas las tareas del usuario.
  - Se desarrolló el método asociado para manejar la lógica y la consulta de datos en la base de datos.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,45 +28,21 @@
                 <button class="add-task" onclick="ShowHideCreateTask()">+ Nueva Tarea</button>
             </div>
             <div class="task-grid">
-                <div class="task-column">
+                <div id="column-ToDo" class="task-column">
                     <div class="column-header">Por Hacer</div>
-                    <div class="task-card">
-                        <div class="task-title">Diseñar nueva interfaz</div>
-                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo
-                            ex excepturi, ullam</div>
-                        <div class="task-date">Vence: 15 Enero</div>
-                        <span class="task-priority high">Alta</span>
-                    </div>
-                    <div class="task-card">
-                        <div class="task-title">Actualizar documentación</div>
-                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo
-                            ex excepturi, ullam</div>
-                        <div class="task-date">Vence: 20 Enero</div>
-                        <span class="task-priority low">Baja</span>
-                    </div>
+
                 </div>
 
-                <div class="task-column">
+                <div id="column-InProgress" class="task-column">
                     <div class="column-header">En Progreso</div>
-                    <div class="task-card">
-                        <div class="task-title">Desarrollo backend</div>
-                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo
-                            ex excepturi, ullam</div>
-                        <div class="task-date">Vence: 18 Enero</div>
-                        <span class="task-priority medium">Media</span>
-                    </div>
+                    
                 </div>
 
-                <div class="task-column">
+                <div id="column-completed" class="task-column">
                     <div class="column-header">Completado</div>
-                    <div class="task-card">
-                        <div class="task-title">Reunión de equipo</div>
-                        <div class="task-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo
-                            ex excepturi, ullam</div>
-                        <div class="task-date">Completado: 5 Enero</div>
-                        <span class="task-priority low">Baja</span>
-                    </div>
+
                 </div>
+
             </div>
         </div>
 
