--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -199,6 +199,7 @@ body {
     background-color: #fff;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
+    resize: vertical;
 }
 
 .txt-task:focus {
