--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -112,7 +112,7 @@ body {
     border-left: 4px solid #3498db;
 }
 
-/* create-task */
+/* Create Task Modal AND Update Task Modal*/
 
 .task-title {
     font-weight: bold;
@@ -153,7 +153,7 @@ body {
     color: white;
 }
 
-.create-Task-Container {
+.create-Task-Container, .update-Task-Container {
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     height: 100%;
@@ -164,7 +164,7 @@ body {
     z-index: 100;
 }
 
-.create-task {
+.create-task, .update-task {
     background-color: #f8f9fa;
     display: flex;
     flex-direction: column;
@@ -221,9 +221,10 @@ select.task-priority {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
 }
 
-.save-task {
+.btn-task {
     background-color: #007bff;
     color: white;
     font-size: 14px;
@@ -233,6 +234,7 @@ select.task-priority {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    width: 110px;
 }
 
 .save-task:hover {
