Implementación de funcionalidades clave: eliminación de tareas y registro de usuarios
- Se creó el endpoint `/delete-task` para permitir la eliminación de tareas desde el servidor.
- Se implementó el método `DeleteTask()` en JavaScript, encargado de enviar solicitudes HTTP DELETE al servidor para eliminar tareas seleccionadas.
- Se añadió el endpoint `/record-user` para registrar nuevos usuarios en la base de datos.

Estas mejoras fortalecen las capacidades CRUD de la aplicación, integrando funcionalidad de eliminación y registro de manera eficiente.

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -33,6 +33,10 @@ body {
     border-radius: 5px;
 }
 
+.dashboard-item{
+    background: #34495e;
+}
+
 .menu-item:hover {
     background: #34495e;
 }
