--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,7 +13,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <h1>TaskMaster</h1>
-            <div class="menu-item">Dashboard</div>
+            <div class="menu-item dashboard-item">Dashboard</div>
             <div class="menu-item">Mis Tareas</div>
             <div class="menu-item">Calendario</div>
             <div class="menu-item">Proyectos</div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="task-footer">
                     <button class="btn-task btn-update-task">Actualizar</button>
-                    <button class="btn-task btn-delte-task">Eliminar</button>
+                    <button class="btn-task btn-delete-task">Eliminar</button>
                 </div>
             </div>
         </div>
